Listo para la presentacoin

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
     <title>WASSER AR</title>
     <%- include('./partials/head') %>
 </head>
-<body>
+<body >
     <%- include('./partials/preloader') %>
 <header>
     <%- include('./partials/header') %>
@@ -22,8 +22,8 @@
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                                 
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Los mejores en griferia</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Encontra la mejor calidad en griferia para tu casa!</p>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Los mejores en grifería</span></h1>
+                                    <p data-animation="fadeInLeft" data-delay="0.4s">Encontrá la mejor calidad en grifería para tu casa!</p>
                                     
                                     
                                     <p2>Desliza hacia la izquierda...</p2>
@@ -39,7 +39,7 @@
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Convertite en un POWERWASSER!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Registrate ahora y recibi un cupon del 10%</p>
+                                    <p data-animation="fadeInLeft" data-delay="0.4s">Registrate ahora!</p>
                                     <a href="/user/registrarse" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">comenzar<i class="ti-arrow-right"></i></a><br>
                                     <p2>Desliza hacia la izquierda...</p2>
                                 </div>
