--- a/src/views/iniciarsesion.ejs
+++ b/src/views/iniciarsesion.ejs
@@ -41,9 +41,9 @@
 
         <section class="form-register">
           
-        <button type="submit">Iniciar</button>
+        <button class="botoncito" type="submit">Iniciar</button>
 
-           <p><a href="/recuperar">Olvide mi contraseñá</a></p>
+           
         
             </form>
             <span id="errorEmail" class="text-danger"></span>
