--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -44,7 +44,7 @@
                                                     </ul>
                                                 </li>
                                                
-                                                <li><a href="/categoria">Productos</a>
+                                                <li><a href="/productos/todos">Productos</a>
                                                     <ul class="submenu">
                                                         
                                                         
