--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -197,6 +197,7 @@ thead {
   opacity: 0.9;
 }
 
+
 /* 1. Theme default css */
 /* line 4, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_common.scss */
 body {
@@ -204,6 +205,7 @@ body {
   font-weight: normal;
   font-style: normal;
   font-size: 16px;
+  
   
 }
 
@@ -220,6 +222,10 @@ h6 {
   font-style: normal;
   font-weight: 500;
   text-transform: normal;
+}
+
+.botoncito {
+  cursor: pointer;
 }
 
 h2.card-title {
